--- a/package.json
+++ b/package.json
@@ -11,7 +11,17 @@
   },
   "dependencies": {
     "react": "^19.1.0",
-    "react-dom": "^19.1.0"
+    "react-dom": "^19.1.0",
+    "flowbite-react": "^0.10.1",
+    "framer-motion": "^12.16.0",
+    "react-helmet": "^6.1.0",
+    "react-icons": "^5.5.0",
+    "react-phone-input-2": "^2.15.1",
+    "react-router": "^7.6.1",
+    "react-router-dom": "^7.6.1",
+    "react-share": "^5.2.2",
+    "react-stickynode": "^5.0.2",
+    "react-type-animation": "^3.2.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.30.1",
